--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -14,10 +14,10 @@
     </properties>
     <dependencies>
     	<dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-api</artifactId>
-            <version>1.8</version>
-        </dependency> 
+    		<groupId>net.md-5</groupId>
+    		<artifactId>BungeeCord</artifactId>
+    		<version>1.8</version>
+    	</dependency>
     </dependencies>
     <build>
 		<sourceDirectory>.</sourceDirectory>
